--- a/src/app/users/edit-user/edit-user.component.html
+++ b/src/app/users/edit-user/edit-user.component.html
@@ -5,70 +5,70 @@
     <form [formGroup]="editUserForm" (ngSubmit)="submit()">
 
       <mat-card-content>
-        
+
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Username</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.Username'|translate}}</mat-label>
             <input matInput required formControlName="username"/>
             <mat-error *ngIf="editUserForm.controls.username.hasError('required')">
-              Username is <strong>required</strong>
+              {{'UsersComponent.EditUserComponent.errUsername'|translate}}<strong>{{'UsersComponent.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Email</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.Email'|translate}}</mat-label>
             <input matInput required formControlName="email">
             <mat-error *ngIf="editUserForm.controls.email.hasError('email')">
-              Email is <strong>invalid</strong>
+              {{'UsersComponent.EditUserComponent.errEmail'|translate}}<strong>{{'UsersComponent.EditUserComponent.xxx'|translate}}invalid</strong>
             </mat-error>
             <mat-error *ngIf="editUserForm.controls.email.hasError('required')">
-              Email is <strong>required</strong>
+              {{'UsersComponent.EditUserComponent.errEmail'|translate}}<strong>{{'UsersComponent.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>First name</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.firstname'|translate}}</mat-label>
             <input matInput required formControlName="firstname"/>
             <mat-error *ngIf="editUserForm.controls.firstname.hasError('pattern')">
-              First Name <strong>cannot begin with a special character or number</strong>
+              {{'UsersComponent.EditUserComponent.firstname'|translate}} <strong>{{'UsersComponent.EditUserComponent.cannot'|translate}}</strong>
             </mat-error>
             <mat-error *ngIf="editUserForm.controls.firstname.hasError('required')">
-              First Name is <strong>required</strong>
+              {{'UsersComponent.EditUserComponent.errfirstname'|translate}}<strong>{{'UsersComponent.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Last name</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.lastname'|translate}}</mat-label>
             <input matInput required formControlName="lastname"/>
             <mat-error *ngIf="editUserForm.controls.lastname.hasError('pattern')">
-              Last Name <strong>cannot begin with a special character or number</strong>
+              {{'UsersComponent.EditUserComponent.lastname'|translate}} <strong>{{'UsersComponent.EditUserComponent.cannot'|translate}}</strong>
             </mat-error>
             <mat-error *ngIf="editUserForm.controls.lastname.hasError('required')">
-              Last Name is <strong>required</strong>
+              {{'UsersComponent.EditUserComponent.errlastname'|translate}}<strong>{{'UsersComponent.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div class="password-never-expires-wrapper" fxFlex="48%">
             <mat-checkbox labelPosition="before" formControlName="passwordNeverExpires" >
-              Override password expiry policy
+              {{'UsersComponent.EditUserComponent.Override'|translate}}
             </mat-checkbox>
           </div>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.Office'|translate}}</mat-label>
             <mat-select required formControlName="officeId" (selectionChange)="officeChanged($event.value)">
               <mat-option *ngFor="let office of officesData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="editUserForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{'UsersComponent.EditUserComponent.errOffice'|translate}}<strong>{{'UsersComponent.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Staff</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.Staff'|translate}}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of staffData" [value]="staff.id">
                 {{ staff.displayName }}
@@ -77,28 +77,28 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Roles</mat-label>
+            <mat-label>{{'UsersComponent.EditUserComponent.Roles'|translate}}</mat-label>
             <mat-select required formControlName="roles" multiple>
               <mat-option *ngFor="let role of rolesData" [value]="role.id">
                 {{ role.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="editUserForm.controls.roles.hasError('required')">
-              At least one role <strong>must be selected</strong>
+              {{'UsersComponent.EditUserComponent.atLeast'|translate}}<strong>{{'UsersComponent.EditUserComponent.mustBeSelected'|translate}}</strong>
             </mat-error>
           </mat-form-field>
-        
+
         </div>
-      
+
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!editUserForm.valid">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!editUserForm.valid">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
-    
+
     </form>
-  
+
   </mat-card>
 
 </div>
