--- a/src/app/users/view-user/view-user.component.html
+++ b/src/app/users/view-user/view-user.component.html
@@ -1,15 +1,15 @@
 <div class="container m-b-20" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="end" fxLayoutGap="2%">
   <button mat-raised-button color="primary" [routerLink]="['edit']">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{'UsersComponent.ViewUserComponent.Edit'|translate}}
   </button>
   <button mat-raised-button color="warn" (click)="delete()">
     <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-    Delete
+    {{'UsersComponent.ViewUserComponent.Delete'|translate}}
   </button>
   <button mat-raised-button color="primary" (click)="changeUserPassword()">
     <fa-icon icon="cog"></fa-icon>&nbsp;&nbsp;
-    Change Password
+    {{'UsersComponent.ViewUserComponent.ChangePassword'|translate}}
   </button>
 </div>
 
@@ -22,7 +22,7 @@
       <div fxLayout="row wrap" class="content">
 
         <div fxFlex="50%" class="mat-body-strong">
-          Login Name
+          {{'UsersComponent.ViewUserComponent.username'|translate}}
         </div>
 
         <div fxFlex="50%">
@@ -30,7 +30,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          First Name
+          {{'UsersComponent.ViewUserComponent.firstname'|translate}}
         </div>
 
         <div fxFlex="50%">
@@ -38,7 +38,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Last Name
+          {{'UsersComponent.ViewUserComponent.lastname'|translate}}
         </div>
 
         <div fxFlex="50%">
@@ -47,7 +47,7 @@
 
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="userData.email">
-          Email
+          {{'UsersComponent.ViewUserComponent.Email'|translate}}
         </div>
 
         <div fxFlex="50%" *ngIf="userData.email">
@@ -55,7 +55,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Office
+          {{'UsersComponent.ViewUserComponent.Office'|translate}}
         </div>
 
         <div fxFlex="50%">
@@ -63,7 +63,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Roles
+          {{'UsersComponent.ViewUserComponent.Roles'|translate}}
         </div>
 
         <div fxFlex="50%">
