--- a/src/app/tasks/checker-inbox-and-tasks-tabs/loan-approval/loan-approval.component.html
+++ b/src/app/tasks/checker-inbox-and-tasks-tabs/loan-approval/loan-approval.component.html
@@ -53,7 +53,7 @@
         </ng-container>
 
         <ng-container matColumnDef="loanPurpose">
-          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.LoanApproval.xxx'| translate }}Loan Purpose </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Task.CheckerInboxAndTasksTab.LoanApproval.message'| translate }} </th>
           <td mat-cell *matCellDef="let loan"> {{ loan.loanPurposeName }} </td>
         </ng-container>
 
