--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -331,7 +331,7 @@
             mat-raised-button
             color="primary"
             (click)="setDefaultFeeSettingPosForOffice()"
-            [matTooltip]="'Terminal_Component.FormTerminal.ToolTipsetFeeSelectedBranch'| translate"
+            [matTooltip]="'Terminal_Component.FormTerminal.ToolTipsetFeeSelectedBranch' | translate"
           >
             <svg
               width="1em"
@@ -350,7 +350,7 @@
                 d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0v5z"
               />
             </svg>
-            [matTooltip]="'Terminal_Component.FormTerminal.applyForOffice'| translate"
+            {{ "Terminal_Component.FormTerminal.applyForOffice" | translate }}
           </button>
 
           <button mat-raised-button (click)="reset()">
