--- a/src/app/clients/edit-client/edit-client.component.html
+++ b/src/app/clients/edit-client/edit-client.component.html
@@ -1,26 +1,23 @@
 <div class="container">
-
   <mat-card>
-
     <form [formGroup]="editClientForm">
-
       <mat-card-content>
-
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelOffice' |translate}}</mat-label>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelOffice" | translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeOptions" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="editClientForm.controls.officeId.hasError('required')"
-              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelOfficeMsg' |translate"></mat-error>
+            <mat-error
+              *ngIf="editClientForm.controls.officeId.hasError('required')"
+              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelOfficeMsg' | translate"
+            ></mat-error>
           </mat-form-field>
 
-          <mat-form-field fxFlex="48%" >
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelStaff' |translate}}</mat-label>
+          <mat-form-field fxFlex="48%">
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelStaff" | translate }}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of staffOptions" [value]="staff.id">
                 {{ staff.displayName }}
@@ -29,7 +26,7 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelLegalForm' |translate}}</mat-label>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelLegalForm" | translate }}</mat-label>
             <mat-select formControlName="legalFormId">
               <mat-option *ngFor="let legalForm of legalFormOptions" [value]="legalForm.id">
                 {{ legalForm.value }}
@@ -38,55 +35,69 @@
           </mat-form-field>
 
           <mat-form-field *ngIf="editClientForm.contains('fullname')" fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelFullName' |translate}}</mat-label>
-            <input matInput required formControlName="fullname" class="upper-case-client" >
-            <mat-error *ngIf="editClientForm.controls.fullname.hasError('required')"
-              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelFullNameMsg' |translate"></mat-error>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelFullName" | translate }}</mat-label>
+            <input matInput required formControlName="fullname" class="upper-case-client" />
+            <mat-error
+              *ngIf="editClientForm.controls.fullname.hasError('required')"
+              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelFullNameMsg' | translate"
+            ></mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="editClientForm.contains('firstname')" fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelFirstName' |translate}}</mat-label>
-            <input matInput required formControlName="firstname" class="upper-case-client" >
-            <mat-error *ngIf="editClientForm.controls.firstname.hasError('required')"
-              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelFirstNameMsg' |translate"></mat-error>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelFirstName" | translate }}</mat-label>
+            <input matInput required formControlName="firstname" class="upper-case-client" />
+            <mat-error
+              *ngIf="editClientForm.controls.firstname.hasError('required')"
+              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelFirstNameMsg' | translate"
+            ></mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="editClientForm.contains('middlename')" fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelMidName' |translate}}</mat-label>
-            <input matInput formControlName="middlename" class="upper-case-client" >
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelMidName" | translate }}</mat-label>
+            <input matInput formControlName="middlename" class="upper-case-client" />
           </mat-form-field>
 
           <mat-form-field *ngIf="editClientForm.contains('lastname')" fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelLastName' |translate}}</mat-label>
-            <input matInput required formControlName="lastname" class="upper-case-client" >
-            <mat-error *ngIf="editClientForm.controls.lastname.hasError('required')"
-              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelLastNameMsg' |translate"></mat-error>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelLastName" | translate }}</mat-label>
+            <input matInput required formControlName="lastname" class="upper-case-client" />
+            <mat-error
+              *ngIf="editClientForm.controls.lastname.hasError('required')"
+              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelLastNameMsg' | translate"
+            ></mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{ editClientForm.value.legalFormId === 1 ? ('Client_Component.ClientStepper.GeneralStep.labelDOB' |translate ): ('Client_Component.ClientStepper.GeneralStep.labelCorpDate' |translate) }}</mat-label>
-            <input matInput [max]="maxDate" [matDatepicker]="dateOfBirthDatePicker" formControlName="dateOfBirth">
+            <mat-label>{{
+              editClientForm.value.legalFormId === 1
+                ? ("Client_Component.ClientStepper.GeneralStep.labelDOB" | translate)
+                : ("Client_Component.ClientStepper.GeneralStep.labelCorpDate" | translate)
+            }}</mat-label>
+            <input matInput [max]="maxDate" [matDatepicker]="dateOfBirthDatePicker" formControlName="dateOfBirth" />
             <mat-datepicker-toggle matSuffix [for]="dateOfBirthDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #dateOfBirthDatePicker></mat-datepicker>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelAccountNo' |translate}}</mat-label>
-            <input matInput formControlName="accountNo">
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelAccountNo" | translate }}</mat-label>
+            <input matInput formControlName="accountNo" />
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{ editClientForm.value.legalFormId === 1 ?('Client_Component.ClientStepper.GeneralStep.labelExternalID' |translate):('Client_Component.ClientStepper.GeneralStep.labelTaxNo' |translate)}}</mat-label>
-            <input matInput formControlName="externalId">
+            <mat-label>{{
+              editClientForm.value.legalFormId === 1
+                ? ("Client_Component.ClientStepper.GeneralStep.labelExternalID" | translate)
+                : ("Client_Component.ClientStepper.GeneralStep.labelTaxNo" | translate)
+            }}</mat-label>
+            <input matInput formControlName="externalId" />
+          </mat-form-field>
+
+          <mat-form-field fxFlex="48%" *ngIf="currentUser.permissions.includes('SYSTEM_CONFIG')" >
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelMobile" | translate }}</mat-label>
+            <input matInput formControlName="mobileNo" />
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelMobile' |translate}}</mat-label>
-            <input matInput formControlName="mobileNo">
-          </mat-form-field>
-
-          <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelClientType' |translate}}</mat-label>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelClientType" | translate }}</mat-label>
             <mat-select formControlName="clientTypeId">
               <mat-option *ngFor="let clientType of clientTypeOptions" [value]="clientType.id">
                 {{ clientType.name }}
@@ -95,33 +106,54 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelClientClass' |translate}}</mat-label>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelClientClass" | translate }}</mat-label>
             <mat-select formControlName="clientClassificationId">
-              <mat-option *ngFor="let clientClassification of clientClassificationTypeOptions" [value]="clientClassification.id">
+              <mat-option
+                *ngFor="let clientClassification of clientClassificationTypeOptions"
+                [value]="clientClassification.id"
+              >
                 {{ clientClassification.name }}
               </mat-option>
             </mat-select>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelClientSubmittedDate' |translate}}</mat-label>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="submittedOnDatePicker" formControlName="submittedOnDate">
+            <mat-label>{{
+              "Client_Component.ClientStepper.GeneralStep.labelClientSubmittedDate" | translate
+            }}</mat-label>
+            <input
+              matInput
+              [min]="minDate"
+              [max]="maxDate"
+              [matDatepicker]="submittedOnDatePicker"
+              formControlName="submittedOnDate"
+            />
             <mat-datepicker-toggle matSuffix [for]="submittedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #submittedOnDatePicker></mat-datepicker>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelClientActivatedDate' |translate}}</mat-label>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activatedOnDatePicker" required
-              formControlName="activationDate">
+            <mat-label>{{
+              "Client_Component.ClientStepper.GeneralStep.labelClientActivatedDate" | translate
+            }}</mat-label>
+            <input
+              matInput
+              [min]="minDate"
+              [max]="maxDate"
+              [matDatepicker]="activatedOnDatePicker"
+              required
+              formControlName="activationDate"
+            />
             <mat-datepicker-toggle matSuffix [for]="activatedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activatedOnDatePicker></mat-datepicker>
-            <mat-error *ngIf="editClientForm.controls.activationDate.hasError('required')"
-            [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelClientActivatedDateMsg' |translate"></mat-error>
+            <mat-error
+              *ngIf="editClientForm.controls.activationDate.hasError('required')"
+              [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelClientActivatedDateMsg' | translate"
+            ></mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="editClientForm.value.legalFormId === 1" fxFlex="48%">
-            <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelGender' |translate}}</mat-label>
+            <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelGender" | translate }}</mat-label>
             <mat-select formControlName="genderId">
               <mat-option *ngFor="let gender of genderOptions" [value]="gender.id">
                 {{ gender.name }}
@@ -129,27 +161,44 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-checkbox *ngIf="editClientForm.value.legalFormId === 1" fxFlex="48%" labelPosition="before" formControlName="isStaff" class="margin-v">
-            {{'Client_Component.ClientStepper.GeneralStep.checkboxIsStaff' |translate}}
+          <mat-checkbox
+            *ngIf="editClientForm.value.legalFormId === 1"
+            fxFlex="48%"
+            labelPosition="before"
+            formControlName="isStaff"
+            class="margin-v"
+          >
+            {{ "Client_Component.ClientStepper.GeneralStep.checkboxIsStaff" | translate }}
           </mat-checkbox>
 
-          <div fxFlex="100%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" formGroupName="clientNonPersonDetails"
-            *ngIf="editClientForm.contains('clientNonPersonDetails')">
-
+          <div
+            fxFlex="100%"
+            fxLayout="row wrap"
+            fxLayoutGap="2%"
+            fxLayout.lt-md="column"
+            formGroupName="clientNonPersonDetails"
+            *ngIf="editClientForm.contains('clientNonPersonDetails')"
+          >
             <mat-form-field fxFlex="48%">
-              <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpValidDate' |translate}}</mat-label>
-              <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="incorpValidityTillDateDatePicker" formControlName="incorpValidityTillDate">
+              <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelCorpValidDate" | translate }}</mat-label>
+              <input
+                matInput
+                [min]="minDate"
+                [max]="maxDate"
+                [matDatepicker]="incorpValidityTillDateDatePicker"
+                formControlName="incorpValidityTillDate"
+              />
               <mat-datepicker-toggle matSuffix [for]="incorpValidityTillDateDatePicker"></mat-datepicker-toggle>
               <mat-datepicker #incorpValidityTillDateDatePicker></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpID' |translate}}</mat-label>
-              <input matInput formControlName="incorpNumber">
+              <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelCorpID" | translate }}</mat-label>
+              <input matInput formControlName="incorpNumber" />
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpMainBiz' |translate}}</mat-label>
+              <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelCorpMainBiz" | translate }}</mat-label>
               <mat-select formControlName="mainBusinessLineId">
                 <mat-option *ngFor="let business of businessLineOptions" [value]="business.id">
                   {{ business.name }}
@@ -158,7 +207,9 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpConstitution'|translate}}</mat-label>
+              <mat-label>{{
+                "Client_Component.ClientStepper.GeneralStep.labelCorpConstitution" | translate
+              }}</mat-label>
               <mat-select formControlName="constitutionId">
                 <mat-option *ngFor="let constitution of constitutionOptions" [value]="constitution.id">
                   {{ constitution.name }}
@@ -167,24 +218,22 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="98%">
-              <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpRemark' |translate}}</mat-label>
+              <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelCorpRemark" | translate }}</mat-label>
               <textarea matInput formControlName="remarks"></textarea>
             </mat-form-field>
-
           </div>
-
         </div>
-
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
         <!-- <button type="button" mat-raised-button [routerLink]="['../']">{{'Client_Component.ClientStepper.buttonCancel' |translate}}</button> -->
-        <button type="button" mat-raised-button (click)="goback()">{{'Client_Component.ClientStepper.buttonCancel' |translate}}</button>
-        <button mat-raised-button color="primary" [disabled]="!editClientForm.valid" (click)="submit()">{{'Client_Component.ClientStepper.buttonSubmit' |translate}}</button>
+        <button type="button" mat-raised-button (click)="goback()">
+          {{ "Client_Component.ClientStepper.buttonCancel" | translate }}
+        </button>
+        <button mat-raised-button color="primary" [disabled]="!editClientForm.valid" (click)="submit()">
+          {{ "Client_Component.ClientStepper.buttonSubmit" | translate }}
+        </button>
       </mat-card-actions>
-
     </form>
-
   </mat-card>
-
 </div>
