disable download voucher

--- a/src/app/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/transactions/view-transaction/view-transaction.component.html
@@ -137,11 +137,11 @@
             <div fxFlex="20%">{{ transactionInfo.feeRate }}%</div>
           </div>
 
-          <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
+          <!-- <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
             <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
               <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
             </button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
