--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -76,8 +76,8 @@
       <i class="fas fa-hands-helping"></i>
     </button>
 
-    <button mat-mini-fab 
-      [routerLink]="['/checker-inbox-and-tasks/checker-inbox']" 
+    <button mat-mini-fab
+      [routerLink]="['/checker-inbox-and-tasks/checker-inbox']"
       matTooltip="Phê duyệt">
       <i class="fa fa-check"></i>
     </button>
@@ -92,20 +92,20 @@
       <i class="fas fa-exchange-alt"></i>
     </button>
 
-    <button  mat-mini-fab  
+    <button  mat-mini-fab
       (click)="vtiger()"
       matTooltip="Quản lý lead">
       <i class="fas fa-headset"></i>
     </button>
 
-    <button  mat-mini-fab 
+    <button  mat-mini-fab
         (click)="help()"
         matTooltip="Tài liệu hỗ trợ">
       <i class="fas fa-question-circle"></i>
     </button>
 
 
-    
+
     <!-- <div *midasHasPermission="'POS_UPDATE'">
       <button mat-mini-fab *midasHasActiveModule="'campaignModule'"
        [matMenuTriggerFor]="MarketingMenu"
@@ -232,7 +232,7 @@
   <button mat-menu-item routerLink="/accounts/balance-clients">
     {{ "Quản lý công nợ khách lẻ" | translate }}
   </button>
-  <button mat-menu-item (click)="daily()">
+  <button mat-menu-item routerLink="/accounts/balance-groups">
     {{ "Quản lý công nợ đại lý" | translate }}
   </button>
   <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/accounts/balance-teller">
