update check valid input on partner-advance-cash component
update check valid input on partner-advance-cash component

--- a/src/app/savings/savings-account-view/form-dialog/partner-advance-cash/partner-advance-cash.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/partner-advance-cash/partner-advance-cash.component.html
@@ -77,7 +77,7 @@
     mat-raised-button
     color="primary"
     [mat-dialog-close]="{ data: form }"
-    [disabled]="!form.valid || form.pristine"
+    [disabled]="!form.valid || form.pristine || !advanceCashValidator"
   >
     {{ "Shared_Component.FormDialog.btnAdd" | translate }}
   </button>
