add partner filter on booking branch

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -130,7 +130,7 @@
           </mat-autocomplete>
 
           <mat-form-field fxFlex="18%">
-            <mat-label>Loại gia dịch</mat-label>
+            <mat-label>Loại giao dịch</mat-label>
             <mat-select formControlName="productId">
               <mat-option *ngFor="let type of transactionType" [value]="type.value">
                 {{ type.label }}
