--- a/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
+++ b/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
@@ -49,6 +49,15 @@
       <mat-label>Nhân viên</mat-label>
       <input matInput type="text" formControlName="userName" />
     </mat-form-field>
+
+    <mat-form-field fxFlex="18%">
+      <mat-label>Đối tác</mat-label>
+      <mat-select formControlName="partnerCode">
+        <mat-option *ngFor="let type of partners" [value]="type.code">
+          {{ type.desc }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
 
   <mat-card-content style="margin-top: 10px">
@@ -104,7 +113,16 @@
 
       <ng-container matColumnDef="bookingAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Số tiền</th>
-        <td mat-cell *matCellDef="let booking">{{ booking?.totalBooking | money }}</td>
+        <td mat-cell *matCellDef="let booking">
+          {{ booking?.totalBooking | money }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="partner">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Đối tác</th>
+        <td mat-cell *matCellDef="let booking">
+          <label style="color: green;">{{ displayPartnerName(booking.partnerCode) }}</label>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
@@ -118,7 +136,7 @@
               title="Chọn để xác nhận booking là hợp lệ"
             >
             </mat-checkbox>
-            <label *ngIf="!booking.checkedByStaff" style="color: red;"> Chờ xác thực</label>
+            <label *ngIf="!booking.checkedByStaff" style="color: red"> Chờ xác thực</label>
             <label *ngIf="booking.checkedByStaff" style="color: green"> √ {{ booking?.checkedByStaff }}</label>
           </div>
         </td>
@@ -155,7 +173,7 @@
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
-        <td mat-cell *matCellDef="let booking" style="width: 100px !important; ">
+        <td mat-cell *matCellDef="let booking" style="width: 100px !important">
           <button mat-mini-fab color="default" (click)="showDetailBooking(booking.bookingRefNo)">
             <mat-icon title="Xem chi tiết "> remove_red_eye </mat-icon>
           </button>
