fix download voucheer for office 75-all

--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -117,7 +117,7 @@
       </button>
 
       <button
-        *midasHasPermissions="'SYSTEM_CONFIG'"
+        *midasHasPermission="'SYSTEM_CONFIG'"
         mat-mini-fab
         color="basic"
         [matMenuTriggerFor]="accountingMenu"
