--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -498,7 +498,7 @@
           >
             <img src="assets/images/icons/add.svg" /> Cập nhật Thông tin bill nhiệt
           </button>
-          <button *midasHasPermission="'BILLER_HO'" mat-menu-item (click)="downloadVoucher(refid)">
+          <button *ngIf="this.currentUser.officeId == 3" mat-menu-item (click)="downloadVoucher(refid)">
             <img *ngIf="status != 'V'" src="assets/images/icons/order.svg" />&nbsp; Tải xuống hóa đơn
           </button>
           <hr />
