--- a/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
+++ b/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
@@ -121,7 +121,7 @@
       <ng-container matColumnDef="partner">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Đối tác</th>
         <td mat-cell *matCellDef="let booking">
-          <label style="color: green;">{{ displayPartnerName(booking.partnerCode) }}</label>
+          <label style="color: green;">{{ displayPartnerName(booking.partnerCode) ? displayPartnerName(booking.partnerCode) : '#' }}</label>
         </td>
       </ng-container>
 
