--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -383,7 +383,7 @@
       </button>
 
       <hr />
-      <button mat-menu-item (click)="undoRollTermTransaction(refid, principal - paidAmount)">
+      <button mat-menu-item (click)="undoRollTermTransaction(refid, principal - amountPaid)">
         <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Hủy tạm ứng
       </button>
     </ng-template>
