hide btn "chốt số"

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -33,7 +33,7 @@
           Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
         </h3>
 
-        <button
+        <!-- <button
           *midasHasPermission="'POS_UPDATE'"
           (click)="submitTransactionUpToNow()"
           style="align-self: center; margin-left: 20px"
@@ -41,7 +41,7 @@
           mat-raised-button
         >
           Chốt số &nbsp;<i class="fa fa-archive" aria-hidden="true"></i>
-        </button>
+        </button> -->
       </div>
     </div>
     <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
