upsize ellipsis menu

--- a/src/app/transactions/manage-transaction/manage-transaction.component.scss
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.scss
@@ -160,4 +160,8 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   .example-element-description-attribution {
     opacity: 0.5;
   }
+
+  .fa-ellipsis-v {
+    font-size: x-large;
+  }
 }
