--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.scss
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.scss
@@ -65,3 +65,8 @@ tr.example-detail-row {
 .example-element-description-attribution {
   opacity: 0.5;
 }
+
+
+.fa-ellipsis-v {
+  font-size: x-large;
+}
