add show 4 card digit on make fee transaction

--- a/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
+++ b/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Thêm thu/chi tiền cho giao dịch [{{ txnCode }}]</h1>
+<h1 mat-dialog-title>Thêm thu/chi tiền cho giao dịch <label style="font-weight: bold; color: red;">[{{ txnCode }}]</label> - 4 Số cuối thẻ <label style="font-weight: bold; color: red;">[{{ lastFourCardDigit }}]</label></h1>
 <div mat-dialog-content>
   <span style="color: #e74c3c">{{ messageError }}</span>
   <div class="custom-files-input" fxLayout="column">
