--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -90,7 +90,7 @@
         <th mat-header-cell *matHeaderCellDef>
           {{ "Saving_Account_Component.tabTransactions.lblTransactionDate" | translate }}
         </th>
-        <td mat-cell *matCellDef="let transaction">{{ transaction.transactionDate | date }}</td>
+        <td mat-cell *matCellDef="let transaction">{{ transaction.transactionDate | date: "dd-MM-yyyy HH:mm:ss" }}</td>
       </ng-container>
 
       <ng-container matColumnDef="transactionType">
