--- a/src/app/groups/create-group/create-group.component.html
+++ b/src/app/groups/create-group/create-group.component.html
@@ -39,7 +39,7 @@
           <mat-form-field>
             <mat-label>{{ 'Group_Component.Create_Group_Component.labelType'| translate}}</mat-label>
             <mat-select formControlName="groupTypeId">
-              <mat-option *ngFor="let type of groupType" [value]="groupTypeId"> 
+              <mat-option *ngFor="let type of groupType" [value]="groupTypeId">
               {{ type.viewValue }}
               </mat-option>
             </mat-select>
@@ -63,7 +63,7 @@
               <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeWithDraw'| translate}}</th>
               <td mat-cell mat-body-row-fee *matCellDef="let element, let index">
                 <mat-form-field>
-                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}"> 
+                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}">
                 </mat-form-field>
               </td>
             </ng-container>
@@ -72,13 +72,17 @@
               <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeRollTerm'| translate}}</th>
               <td mat-cell mat-body-row-fee *matCellDef="let element, let index">
                 <mat-form-field>
-                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}"> 
+                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}">
                 </mat-form-field>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
+          <mat-form-field>
+            <mat-label>Phí hoa hồng</mat-label>
+            <input matInput type="number" formControlName="feeReward"  >
+          </mat-form-field>
 
           <mat-form-field *ngIf="this.groupForm.controls.active.value">
             <mat-label>{{ 'Group_Component.Create_Group_Component.labelActivationDate'| translate}}</mat-label>
@@ -107,7 +111,7 @@
             <mat-label>{{ 'Group_Component.Create_Group_Component.labelAddClients'| translate}}</mat-label>
             <input matInput [formControl]="clientChoice" [matAutocomplete]="clientsAutocomplete">
           </mat-form-field>
-  
+
         </div>
 
         <mat-autocomplete autoActiveFirstOption #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient">
