--- a/src/app/groups/edit-group/edit-group.component.html
+++ b/src/app/groups/edit-group/edit-group.component.html
@@ -26,7 +26,7 @@
           <mat-form-field>
             <mat-label>{{ 'Group_Component.Create_Group_Component.labelType'| translate}}</mat-label>
             <mat-select formControlName="groupTypeId" [(value)]="groupTypeId">
-              <mat-option *ngFor="let type of groupType" [value]="type.value" > 
+              <mat-option *ngFor="let type of groupType" [value]="type.value" >
               {{ type.viewValue }}
               </mat-option>
             </mat-select>
@@ -42,20 +42,25 @@
 
             <ng-container matColumnDef="minValue">
               <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeWithDraw'| translate}}</th>
-              <td mat-cell *matCellDef="let element, let index"> 
-                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}"> 
+              <td mat-cell *matCellDef="let element, let index">
+                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}">
               </td>
             </ng-container>
 
             <ng-container matColumnDef="maxValue">
               <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeRollTerm'| translate}}</th>
-              <td mat-cell *matCellDef="let element, let index"> 
-                  <input matInput type="number" (blur)="onBlur($event,index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}"> 
+              <td mat-cell *matCellDef="let element, let index">
+                  <input matInput type="number" (blur)="onBlur($event,index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}">
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
+
+          <mat-form-field>
+            <mat-label>Phí hoa hồng</mat-label>
+            <input matInput type="number" formControlName="feeReward"  >
+          </mat-form-field>
 
           <mat-form-field *ngIf="this.editGroupForm.contains('activationDate')">
             <mat-label>{{ 'Group_Component.Create_Group_Component.labelActivationDate'| translate}}</mat-label>
@@ -78,7 +83,7 @@
             <mat-datepicker #submittedOnDatePicker></mat-datepicker>
             <mat-error *ngIf="editGroupForm.controls.submittedOnDate.hasError('required')" [innerHTML]="'Group_Component.Create_Group_Component.labelGroupSubmittedOnMsgRequired' |translate"></mat-error>
           </mat-form-field>
-          
+
         </div>
 
       </mat-card-content>
