--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -278,10 +278,13 @@
       </ng-container>
 
       <ng-container matColumnDef="panHolderName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Khách hàng</th>
-        <td mat-cell *matCellDef="let journalEntry">
-          {{ journalEntry.panHolderName }} <br />
-          <span class="green_text">{{ journalEntry.agencyName == "#" ? "" : journalEntry.agencyName }}</span>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Khách hàng/Nhân viên/Đại lý</th>
+        <td mat-cell *matCellDef="let transaction">
+          <label>{{ transaction.panHolderName }}</label>
+          <br />
+          <label class="blue_text">({{ transaction.staffOwnerName }})</label>
+          <br />
+          <label class="green_text">{{ transaction.agencyName == "#" ? "" : transaction.agencyName }}</label>
         </td>
       </ng-container>
 
