--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -56,12 +56,16 @@
 
     <mat-form-field fxFlex="20%">
       <mat-label>Ngân hàng</mat-label>
-      <select matSelect matNativeControl formControlName="bankFilter">
-        <option value="ALL">Tất cả ngân hàng</option>
-        <option *ngFor="let bank of banks" [value]="bank.bankCode">
-          {{ bank.bankName }}
-        </option>
-      </select>
+      <input type="text"
+             placeholder="Chọn ngân hàng"
+             matInput
+             formControlName="bankFilter"
+             [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayBank">
+        <mat-option *ngFor="let bank of filteredBankOptions  | async" [value]="bank" >
+          {{displayBank(bank)}}
+        </mat-option>
+      </mat-autocomplete>
     </mat-form-field>
 
     <mat-form-field fxFlex="20%">
