fix filter bank on card rollterm, due day

--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -58,6 +58,7 @@
       <input type="text"
              placeholder="Chọn ngân hàng"
              matInput
+             (click)="resetAutoCompleteBank()"
              formControlName="bankName"
              [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayBank">
